fixed the error

--- a/react-web/src/index.css
+++ b/react-web/src/index.css
@@ -2,4 +2,19 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: #ccf6f4;
+  color: rgb(177, 181, 179);
+  margin: 20px;
+}
+
+a{
+  text-decoration: none;
+}
+
+li{
+  list-style: none;
+}
+
+.container{
+  margin:40px;
 }
